--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "jinja2>=3.1",
     "pandas>=2.2",
     "python-multipart>=0.0.22",
+    "polars>=1.38.1",
 ]
 
 [dependency-groups]
